// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings wallet reducer should handle WALLET_ALLOWANCE 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {
    "TK1": Object {
      "address": null,
      "allowance": Object {
        "0xee42d0ea34b0b40d1930ed05ed2845d08ea7cfd1": 4,
      },
      "balance": "0",
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": null,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": "TK1",
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "url": null,
      "withFee": null,
    },
  },
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_BALANCE 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {
    "TK1": Object {
      "address": null,
      "allowance": Object {},
      "balance": "5",
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": null,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": "TK1",
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "url": null,
      "withFee": null,
    },
  },
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_IS_TIME_REQUIRED 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": false,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 3,
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT 2`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": "0xec8a163d2ebc655fd44a7b159ca637abb380339c",
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TOKENS 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {
    "TK1": Object {
      "address": null,
      "allowance": Object {},
      "balance": "0",
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": null,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": "TK1",
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "url": null,
      "withFee": null,
    },
    "TK2": Object {
      "address": null,
      "allowance": Object {},
      "balance": "0",
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": null,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": "TK2",
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "url": null,
      "withFee": null,
    },
  },
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TOKENS_FETCH 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": true,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTION 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {
      "hash1 - 1 - 2": Object {
        "args": null,
        "blockHash": null,
        "blockNumber": 10,
        "by": null,
        "credited": null,
        "from": 1,
        "gas": null,
        "gasFee": "0",
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": "",
        "time": null,
        "timestamp": null,
        "to": 2,
        "transactionIndex": null,
        "txHash": "hash1",
        "type": "",
        "value": "0",
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": Object {
      "tx1": Object {
        "args": null,
        "blockHash": null,
        "blockNumber": null,
        "by": null,
        "credited": null,
        "from": 1,
        "gas": null,
        "gasFee": "0",
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": "",
        "time": null,
        "timestamp": null,
        "to": 2,
        "transactionIndex": null,
        "txHash": "hash1",
        "type": "",
        "value": "0",
      },
      "tx2": Object {
        "args": null,
        "blockHash": null,
        "blockNumber": null,
        "by": null,
        "credited": null,
        "from": 3,
        "gas": null,
        "gasFee": "0",
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": "",
        "time": null,
        "timestamp": null,
        "to": 4,
        "transactionIndex": null,
        "txHash": "hash2",
        "type": "",
        "value": "0",
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS_FETCH 1`] = `
Object {
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": "0",
  "timestamp": null,
  "tokens": Object {},
  "transactionHash": null,
  "transactions": Object {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": Object {
      "a": 1,
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
}
`;
